# vida_academica_DSII

./: .commitlintrc.ts  .editorconfig  .gitignore  .markdownlint.yaml  Makefile  README.md  compose.yaml  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: backend_checks.yaml  commits.yaml  docker_image_build.yaml  frontend_checks.yaml  markdown.yaml  sonarqube.yaml
client/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
client/src/: App.css  App.test.tsx  App.tsx  index.css
client/src/api/: auth.test.ts  auth.ts  client.test.ts  client.ts  dashboard.test.ts  dashboard.ts
client/src/components/: OnboardingTour.test.tsx  OnboardingTour.tsx
client/src/components/ui/: Pagination.tsx  (+2 more)
client/src/context/: ThemeContext.tsx  ThemeProvider.tsx
client/src/test/: setup.ts
docs/ux/: sprint3_filtrado.md  sprint3_reprogramacion.md  sprint3_resolucion_conflictos.md
k8s/: backend-deployments.yaml  backend-service.yaml  frontend-deployments.yaml  frontend-service.yaml  namespace.yaml
server/: conftest.py  dockerfile  manage.py  pyproject.toml  tags
server/config/: settings.py  urls.py
server/planner/: admin.py  apps.py  exceptions.py  models.py  serializers.py  test_run.py  tests.py  urls.py  views.py
server/planner/migrations/: 0001_initial.py  0002_activity_updated_at.py  0003_alter_user_options_alter_user_managers_and_more.py  0004_rename_activity_subtask_activity_id_and_more.py  0005_activity_course_name.py  0006_subject.py  0007_activity_subject_usersubject.py  0008_alter_user_email.py  0009_alter_user_email.py  0010_activity_planner_act_user_id_e63223_idx_and_more.py  0011_useronboarding.py  0012_add_subtask_composite_index.py  0013_subject_user_delete_usersubject.py  0014_alter_subject_user.py
server/planner/tests/: test_subtask_reschedule.py  test_today.py
(+83 files in other folders)
